Fixed sidebar-hidden's visibility issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -374,6 +374,7 @@ body {
   }
 
   .sidebar-hidden {
+    visibility: visible;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
